removing security issue

--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -74,6 +74,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AdventureWorks2022Entities" connectionString="metadata=res://*/AdventureWorks.csdl|res://*/AdventureWorks.ssdl|res://*/AdventureWorks.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEEKSHAGAUR\SQLEXPRESS;initial catalog=AdventureWorks2022;persist security info=True;user id=EFSetup;password=EFSetup;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AdventureWorks2022Entities" connectionString="metadata=res://*/AdventureWorks.csdl|res://*/AdventureWorks.ssdl|res://*/AdventureWorks.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEEKSHAGAUR\SQLEXPRESS;initial catalog=AdventureWorks2022;persist security info=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
